k8s/arr/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:latest
        ports:
        - containerPort: 6767
        volumeMounts:
        - name: movies
          mountPath: /movies
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /tv
        livenessProbe:
          httpGet:
            path: /
            port: 6767
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 6767
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          requests:
            memory: "210Mi"
            cpu: "100m"
      volumes:
      - name: movies
        nfs:
          server: 192.168.2.254
          path: /mnt/tank/media/Movies
      - name: config
        persistentVolumeClaim:
          claimName: bazarr-config-nfs-pvc
      - name: tv
        nfs:
          server: 192.168.2.254
          path: /mnt/tank/media/Tv
